# Telegram-Distribution-System

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt
app/: __init__.py  __main__.py  config.py  db.py  manager_bot.py  scheduler.py  service.py  targets.py  telegram_service.py  timeutils.py
tests/: test_database.py  test_documentation.py  test_manager_bot.py  test_scheduler.py  test_telegram_service.py
